tests/invalid/data_loader_missing_type.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderMissingType",
    "description": "Test case: data loader missing required 'type' field",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadLoader": {
      "loader_id": "TestLoader",
      "provides": {
        "T": { "units": "K", "description": "Temperature" }
      }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}